@@ -200,6 +200,14 @@ enum cb_screen_clauses_rules {
 	CB_XOPEN_SCREEN_RULES
 };
 
+/* DECIMAL-POINT IS COMMA effect in XML/JSON GENERATE statements */
+enum cb_dpc_in_data_options {
+	CB_DPC_IN_NONE,
+	CB_DPC_IN_XML,
+	CB_DPC_IN_JSON,
+	CB_DPC_IN_ALL
+};
+
 /* Generic text list structure */
 struct cb_text_list {
 	struct cb_text_list	*next;			/* next pointer */
