@@ -89,6 +89,9 @@ CB_CONFIG_ANY (enum cb_assign_type, cb_assign_type_default, "assign-clause",
 CB_CONFIG_ANY (enum cb_screen_clauses_rules, cb_screen_section_clauses, "screen-section-rules",
 	_("which compiler's rules to apply to SCREEN SECTION item clauses"))
 
+CB_CONFIG_ANY (enum cb_dpc_in_data_options, cb_dpc_in_data, "dpc-in-data",
+	_("whether DECIMAL-POINT IS COMMA has effect in XML/JSON GENERATE, may be one of: none, xml, json, all"))
+
 /* Normal boolean flags */
 
 CB_CONFIG_BOOLEAN (cb_filename_mapping, "filename-mapping",
