@@ -657,6 +657,10 @@ CONTROL_STATEMENT_STATE>{
   "CONSTANT"		{
 	return CONSTANT;
   }
+  "DPCINDATA" |
+  "DPC-IN-DATA"		{
+	return DPC_IN_DATA;
+  }
   "FOLDCOPYNAME" |
   "FOLD-COPY-NAME"	{
 	return FOLDCOPYNAME;
@@ -664,6 +668,12 @@ CONTROL_STATEMENT_STATE>{
   "MAKESYN" |
   "MAKE-SYN"		{
 	return MAKESYN;
+  }
+  "NODPCINDATA" |
+  "NO-DPCINDATA" |
+  "NODPC-IN-DATA" |
+  "NO-DPC-IN-DATA" {
+	return NODPC_IN_DATA;
   }
   "NOFOLDCOPYNAME" |
   "NOFOLD-COPY-NAME" |
