@@ -584,8 +584,10 @@ ppparse_clear_vars (const struct cb_define_struct *p)
 %token XFD
 %token COMP1
 %token CONSTANT
+%token DPC_IN_DATA	"DPC-IN-DATA"
 %token FOLDCOPYNAME
 %token MAKESYN
+%token NODPC_IN_DATA	"NODPC-IN-DATA"
 %token NOFOLDCOPYNAME
 /* OVERRIDE token defined above. */
 %token REMOVE
@@ -796,6 +798,26 @@ set_choice:
 		ppp_error_invalid_option ("COMP1", p);
 	}
   }
+| DPC_IN_DATA LITERAL
+  {
+	char	*p = $2;
+	size_t	size;
+
+	/* Remove surrounding quotes/brackets */
+	++p;
+	size = strlen (p) - 1;
+	p[size] = '\0';
+
+	if (!strcasecmp (p, "XML")) {
+		cb_dpc_in_data = CB_DPC_IN_XML;
+	} else if (!strcasecmp (p, "JSON")) {
+		cb_dpc_in_data = CB_DPC_IN_JSON;
+	} else if (!strcasecmp (p, "ALL")) {
+		cb_dpc_in_data = CB_DPC_IN_ALL;
+	} else {
+		ppp_error_invalid_option ("DPC-IN-DATA", p);
+	}
+  }
 | FOLDCOPYNAME _as LITERAL
   {
 	char	*p = $3;
@@ -817,6 +839,10 @@ set_choice:
 | MAKESYN alnum_equality
   {
 	fprintf (ppout, "#MAKESYN %s %s\n", $2->text, $2->next->text);
+  }
+| NODPC_IN_DATA
+  {
+	cb_dpc_in_data = CB_DPC_IN_NONE;
   }
 | NOFOLDCOPYNAME
   {
