@@ -182,6 +182,9 @@ implicit-assign-dynamic-var:	yes
 # What rules to apply to SCREEN SECTION items clauses
 screen-section-rules:		acu
 
+# Whether DECIMAL-POINT IS COMMA has effect in XML/JSON GENERATE
+dpc-in-data:			xml # verify
+
 # Dialect features
 # Value: 'ok', 'warning', 'archaic', 'obsolete', 'skip', 'ignore', 'error',
 #        'unconformable'
