@@ -180,6 +180,9 @@ implicit-assign-dynamic-var:	yes
 # What rules to apply to SCREEN SECTION items clauses
 screen-section-rules:		mf
 
+# Whether DECIMAL-POINT IS COMMA has effect in XML/JSON GENERATE
+dpc-in-data:			xml
+
 # Dialect features
 # Value: 'ok', 'warning', 'archaic', 'obsolete', 'skip', 'ignore', 'error',
 #        'unconformable'
