@@ -124,7 +124,8 @@ get_pic_for_num_field (const size_t num_int_digits, const size_t num_dec_digits)
 }
 
 static void *
-get_num (cob_field * const f, void * (*strndup_func)(const char *, size_t))
+get_num (cob_field * const f, void * (*strndup_func)(const char *, size_t),
+	 const char decimal_point)
 {
 	size_t		num_integer_digits
 		= cob_max_int (0, COB_FIELD_DIGITS (f) - COB_FIELD_SCALE (f));
@@ -132,17 +133,18 @@ get_num (cob_field * const f, void * (*strndup_func)(const char *, size_t))
 		= cob_max_int (0, COB_FIELD_SCALE (f));
 	cob_field_attr	attr;
 	cob_field       edited_field;
+	char		*dp_pos;
         void		*num;
 
-	/* Initialize field attribute */
+	/* Initialize attribute for nicely edited version of f */
 	attr.type = COB_TYPE_NUMERIC_EDITED;
 	attr.flags = COB_FLAG_JUSTIFIED;
 	attr.scale = COB_FIELD_SCALE (f);
 	attr.digits = COB_FIELD_DIGITS (f);
 	attr.pic = get_pic_for_num_field (num_integer_digits,
-					      num_decimal_digits);
+					  num_decimal_digits);
 
-	/* Initialize field */
+	/* Initialize field for nicely edited version */
 	edited_field.attr = &attr;
 	edited_field.size = cob_max_int (2, (int) num_integer_digits + 1);
 	if (num_decimal_digits) {
@@ -150,7 +152,17 @@ get_num (cob_field * const f, void * (*strndup_func)(const char *, size_t))
 	}
 	edited_field.data = cob_malloc (edited_field.size);
 
+	/* Set field */
 	cob_move (f, &edited_field);
+
+	/* Replace decimal point in num with given decimal_point */
+	dp_pos = memchr (edited_field.data, COB_MODULE_PTR->decimal_point,
+			 edited_field.size);
+	if (dp_pos) {
+		*dp_pos = decimal_point;
+	}
+
+	/* Trim output and clean up */
 	num = get_trimmed_data (&edited_field, strndup_func);
 
 	cob_free (edited_field.data);
@@ -286,7 +298,7 @@ get_xml_name (const cob_field * const f)
 
 static int
 generate_xml_from_tree (xmlTextWriterPtr, cob_ml_tree *, xmlChar *, xmlChar *,
-			unsigned int *);
+			const char, unsigned int *);
 
 static xmlChar *
 get_name_with_hex_prefix (const cob_field * const name)
@@ -428,13 +440,14 @@ generate_hex_element (xmlTextWriterPtr writer, cob_ml_tree *tree,
 
 
 static xmlChar *
-get_xml_num (cob_field * const f)
+get_xml_num (cob_field * const f, const char decimal_point)
 {
-	return get_num (f, &xmlCharStrndup_void);
+	return get_num (f, &xmlCharStrndup_void, decimal_point);
 }
 
 static int
-generate_content (xmlTextWriterPtr writer, cob_ml_tree *tree, unsigned int *count)
+generate_content (xmlTextWriterPtr writer, cob_ml_tree *tree,
+		  const char decimal_point, unsigned int *count)
 {
 	cob_field	*content = tree->content;
 	xmlChar		*x_content;
@@ -445,7 +458,7 @@ generate_content (xmlTextWriterPtr writer, cob_ml_tree *tree, unsigned int *coun
 		cob_set_exception (COB_EC_IMP_FEATURE_MISSING);
 		cob_fatal_error (COB_FERROR_XML);
 	} else if (COB_FIELD_IS_NUMERIC (content)) {
-		x_content = get_xml_num (content);
+		x_content = get_xml_num (content, decimal_point);
 	} else {
 		x_content = get_trimmed_xml_data (content);
 	}
@@ -459,7 +472,8 @@ generate_content (xmlTextWriterPtr writer, cob_ml_tree *tree, unsigned int *coun
 
 static int
 generate_normal_element (xmlTextWriterPtr writer, cob_ml_tree *tree,
-			 xmlChar *x_ns, xmlChar *x_ns_prefix, unsigned int *count)
+			 xmlChar *x_ns, xmlChar *x_ns_prefix,
+			 const char decimal_point, unsigned int *count)
 {
 	int		status;
 	xmlChar		*x_name;
@@ -484,13 +498,14 @@ generate_normal_element (xmlTextWriterPtr writer, cob_ml_tree *tree,
 			  outermost element.
 			*/
 			status = generate_xml_from_tree (writer, child, NULL,
-							 x_ns_prefix, count);
+							 x_ns_prefix,
+							 decimal_point, count);
 			if (status < 0) {
 				return status;
 			}
 		}
 	} else if (tree->content) {
-		status = generate_content (writer, tree, count);
+		status = generate_content (writer, tree, decimal_point, count);
 		if (status < 0) {
 			return status;
 		}
@@ -504,7 +519,8 @@ generate_normal_element (xmlTextWriterPtr writer, cob_ml_tree *tree,
 
 static int
 generate_element (xmlTextWriterPtr writer, cob_ml_tree *tree,
-		  xmlChar *x_ns, xmlChar *x_ns_prefix, unsigned int *count)
+		  xmlChar *x_ns, xmlChar *x_ns_prefix, const char decimal_point,
+		  unsigned int *count)
 {
 	/* Check for invalid characters. */
 	if (tree->content
@@ -515,22 +531,25 @@ generate_element (xmlTextWriterPtr writer, cob_ml_tree *tree,
 					     count);
 	} else {
 		return generate_normal_element (writer, tree, x_ns,
-						x_ns_prefix, count);
+						x_ns_prefix, decimal_point,
+						count);
 	}
 }
 
 static int
 generate_xml_from_tree (xmlTextWriterPtr writer, cob_ml_tree *tree,
-			xmlChar *ns, xmlChar *ns_prefix, unsigned int *count)
+			xmlChar *ns, xmlChar *ns_prefix,
+			const char decimal_point, unsigned int *count)
 {
 	if (tree->is_suppressed) {
 		return 0;
 	}
 
 	if (tree->name) {
-		return generate_element (writer, tree, ns, ns_prefix, count);
+		return generate_element (writer, tree, ns, ns_prefix,
+					 decimal_point, count);
 	} else {
-		return generate_content (writer, tree, count);
+		return generate_content (writer, tree, decimal_point, count);
 	}
 }
 
@@ -580,13 +599,13 @@ get_trimmed_json_data (const cob_field * const f)
 }
 
 static char *
-get_json_num (cob_field * const f)
+get_json_num (cob_field * const f, const char decimal_point)
 {
-	return (char *) get_num (f, &json_strndup);
+	return (char *) get_num (f, &json_strndup, decimal_point);
 }
 
 static int
-generate_json_from_tree (cob_ml_tree *tree, cJSON *out)
+generate_json_from_tree (cob_ml_tree *tree, const char decimal_point, cJSON *out)
 {
 	cob_ml_tree	*child;
 	cJSON		*children_json = NULL;
@@ -602,7 +621,8 @@ generate_json_from_tree (cob_ml_tree *tree, cJSON *out)
 	if (tree->children) {
 		children_json = cJSON_CreateObject ();
 		for (child = tree->children; child; child = child->sibling) {
-			status = generate_json_from_tree (child, children_json);
+			status = generate_json_from_tree (child, decimal_point,
+							  children_json);
 			if (status < 0) {
 				cJSON_Delete (children_json);
 				goto end;
@@ -616,7 +636,7 @@ generate_json_from_tree (cob_ml_tree *tree, cJSON *out)
 			cob_set_exception (COB_EC_IMP_FEATURE_MISSING);
 			cob_fatal_error (COB_FERROR_JSON);
 		} else if (COB_FIELD_IS_NUMERIC (tree->content)) {
-			content = get_json_num (tree->content);
+			content = get_json_num (tree->content, decimal_point);
 			/*
 			  We use AddRaw instead of AddNumber because a PIC 9(32)
 			  may not be representable using the double AddNumber
@@ -716,7 +736,8 @@ cob_is_valid_uri (const char *str)
 
 void
 cob_xml_generate (cob_field *out, cob_ml_tree *tree, cob_field *count,
-		  const int with_xml_dec, cob_field *ns, cob_field *ns_prefix)
+		  const int with_xml_dec, cob_field *ns, cob_field *ns_prefix,
+		  const char decimal_point)
 {
 	xmlBufferPtr		buff;
 	xmlTextWriterPtr	writer = NULL;
@@ -779,7 +800,7 @@ cob_xml_generate (cob_field *out, cob_ml_tree *tree, cob_field *count,
 	}
 
         status = generate_xml_from_tree (writer, tree, x_ns, x_ns_prefix,
-				     &chars_written);
+					 decimal_point, &chars_written);
 	if (status < 0) {
 		set_xml_exception (XML_INTERNAL_ERROR);
 		goto end;
@@ -832,7 +853,8 @@ cob_xml_generate (cob_field *out, cob_ml_tree *tree, cob_field *count,
 
 void
 cob_xml_generate (cob_field *out, cob_ml_tree *tree, cob_field *count,
-		  const int with_xml_dec, cob_field *ns, cob_field *ns_prefix)
+		  const int with_xml_dec, cob_field *ns, cob_field *ns_prefix,
+		  const char decimal_point)
 {
 	COB_UNUSED (out);
 	COB_UNUSED (tree);
@@ -840,6 +862,7 @@ cob_xml_generate (cob_field *out, cob_ml_tree *tree, cob_field *count,
 	COB_UNUSED (with_xml_dec);
 	COB_UNUSED (ns);
 	COB_UNUSED (ns_prefix);
+	COB_UNUSED (decimal_point);
 }
 
 #endif
@@ -847,7 +870,8 @@ cob_xml_generate (cob_field *out, cob_ml_tree *tree, cob_field *count,
 #if WITH_CJSON
 
 void
-cob_json_generate (cob_field *out, cob_ml_tree *tree, cob_field *count)
+cob_json_generate (cob_field *out, cob_ml_tree *tree, cob_field *count,
+		   const char decimal_point)
 {
 	cJSON	*json;
 	int	status = 0;
@@ -864,7 +888,7 @@ cob_json_generate (cob_field *out, cob_ml_tree *tree, cob_field *count)
 		goto end;
 	}
 
-	status = generate_json_from_tree (tree, json);
+	status = generate_json_from_tree (tree, decimal_point, json);
 	if (status < 0) {
 		set_json_exception (JSON_INTERNAL_ERROR);
 		goto end;
@@ -909,11 +933,13 @@ cob_json_generate (cob_field *out, cob_ml_tree *tree, cob_field *count)
 #else /* !WITH_CJSON */
 
 void
-cob_json_generate (cob_field *out, cob_ml_tree *tree, cob_field *count)
+cob_json_generate (cob_field *out, cob_ml_tree *tree, cob_field *count,
+		   const int decimal_point)
 {
 	COB_UNUSED (out);
 	COB_UNUSED (tree);
 	COB_UNUSED (count);
+	COB_UNUSED (decimal_point);
 }
 
 #endif
