@@ -422,6 +422,7 @@ test.conf: missing definitions:
 	no definition of 'binary-byteorder'
 	no definition of 'assign-clause'
 	no definition of 'screen-section-rules'
+	no definition of 'dpc-in-data'
 	no definition of 'filename-mapping'
 	no definition of 'pretty-display'
 	no definition of 'binary-truncate'
