@@ -731,3 +731,88 @@ AT_DATA([prog.cob], [
 AT_CHECK([$COMPILE prog.cob], [0], [], [])
 AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
 AT_CLEANUP
+
+
+AT_SETUP([DPC-IN-DATA directive])
+AT_KEYWORDS([XML JSON extensions])
+
+AT_DATA([prog.cob], [
+      $SET DPC-IN-DATA "JSON"
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+
+       ENVIRONMENT DIVISION.
+       CONFIGURATION SECTION.
+       SPECIAL-NAMES.
+           DECIMAL-POINT IS COMMA.
+           
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       01  num PIC 9V9 VALUE 1,1.
+       01  out PIC X(100).
+       
+       PROCEDURE DIVISION.
+           XML GENERATE out FROM num
+           IF out <> '<num>1.1</num>'
+               DISPLAY "Failed 1: " FUNCTION TRIM (out)
+           END-IF
+
+           JSON GENERATE out FROM num
+           IF out <> '{"num":1,1}'
+               DISPLAY "Failed 2: " FUNCTION TRIM (out)
+           END-IF
+           .
+])
+
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
+AT_CLEANUP
+
+
+AT_SETUP([dpc-in-data config option])
+AT_KEYWORDS([XML JSON extensions])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+
+       ENVIRONMENT DIVISION.
+       CONFIGURATION SECTION.
+       SPECIAL-NAMES.
+           DECIMAL-POINT IS COMMA.
+           
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       01  num PIC 9V9 VALUE 1,1.
+       01  out PIC X(100).
+       
+       PROCEDURE DIVISION.
+           XML GENERATE out FROM num
+           DISPLAY FUNCTION TRIM(out)
+
+           JSON GENERATE out FROM num
+           DISPLAY FUNCTION TRIM(out)
+           .
+])
+
+AT_CHECK([$COMPILE -fdpc-in-data=none prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
+[<num>1.1</num>
+{"num":1.1}
+])
+AT_CHECK([$COMPILE -fdpc-in-data=xml prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
+[<num>1,1</num>
+{"num":1.1}
+])
+AT_CHECK([$COMPILE  -fdpc-in-data=json prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
+[<num>1.1</num>
+{"num":1,1}
+])
+AT_CHECK([$COMPILE  -fdpc-in-data=all prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
+[<num>1,1</num>
+{"num":1,1}
+])
+AT_CLEANUP
