@@ -1,4 +1,8 @@
 
+2020-07-17  Edward Hart <edward.dan.hart@gmail.com>
+
+	* general: added option dpc-in-data.
+
 2020-07-05  Edward Hart <edward.dan.hart@gmail.com>
 
 	* general: added option vsam-status.
