@@ -1,8 +1,12 @@
 
+2020-07-17  Edward Hart <edward.dan.hart@gmail.com>
+
+	* mlio.c, common.h: added decimal_point param to cob_xml/json_generate.
+
 2020-07-15  Ron Norman <rjn@inglenet.com>
 
-	* call.c,common.h,common.c: Have cob_module_free in common.c 
-			clean up the list of modules used in call.c to avoid 
+	* call.c,common.h,common.c: Have cob_module_free in common.c
+			clean up the list of modules used in call.c to avoid
 			reference to freed memory
 
 2020-07-07  Edward Hart <edward.dan.hart@gmail.com>
